fix: custom blocks' styles for dark mode

--- a/notes/.vuepress/theme/styles/custom-blocks.styl
+++ b/notes/.vuepress/theme/styles/custom-blocks.styl
@@ -8,24 +8,20 @@
     border-left-style solid
     margin 1rem 0
   &.tip
-    background-color #f3f5f7
+    background-color var(--background-color-secondary)
     border-color #42b983
   &.warning
-    background-color rgba(255,229,100,.3)
+    background-color rgba(255, 229, 100, .3)
     border-color darken(#ffe564, 35%)
-    color darken(#ffe564, 70%)
+    color darken(#da9528, 80%)
     .custom-block-title
-      color darken(#ffe564, 50%)
-    a
-      color $textColor
+      color darken(#ffe564, 45%)
   &.danger
     background-color #ffe6e6
     border-color darken(red, 20%)
     color darken(red, 70%)
     .custom-block-title
       color darken(red, 40%)
-    a
-      color $textColor
   &.details
     display block
     position relative
